creating whatsnew service, controller, repo

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -6,4 +6,9 @@ ktor {
     application {
         modules = [ ca.etsmtl.applets.notre_dame.ApplicationKt.module ]
     }
+
 }
+
+database.name = WhatsNewDb
+database.usersCollection = Users
+database.whatsNewCollection = WhatsNew
