--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,11 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
+
 group 'ca.etsmtl.applets.notre_dame'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
+
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -36,5 +38,15 @@ dependencies {
     compile "io.ktor:ktor-server-core:$ktor_version"
     compile "io.ktor:ktor-auth:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
+    compile "org.kodein.di:kodein-di-generic-jvm:5.2.0"
+    compile "org.litote.kmongo:kmongo-native:3.8.1"
+    implementation "io.ktor:ktor-locations:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
