--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,13 @@ dependencies {
     implementation "io.ktor:ktor-locations:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=io.ktor.Experimental"]
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinTest).all {
+    kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=io.ktor.Experimental"]
+}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
