still having problem with users

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,7 @@
 db.name = WhatsNewDb
 db.usersCollection = Users
-db.whatsNewCollection = WhatsNew
+db.whatsNewCollectionEn = WhatsNewEn
+db.whatsNewCollectionFr = WhatsNewFr
 
 jwt.secret = b146c04d-0fbc-4f2e-8d53-33746c941caa
 #24 hours
