finally login workin with token

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -5,4 +5,4 @@ db.whatsNewCollectionFr = WhatsNewFr
 
 jwt.secret = b146c04d-0fbc-4f2e-8d53-33746c941caa
 #24 hours
-jwt.validityInMs = 86_400_000  
+jwt.validityInMs =86400000
